--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@
 
 body {
     padding-top: 100px;
+    font-family: 'PT Sans', sans-serif;
 }
 
 /* Header */
@@ -161,4 +162,12 @@ header {
     width: 500px;
     height: 500px;
     border: 2px dashed red;
+}
+
+.testimonials-card {
+    background-color: var(--purple);
+    border-radius: 20px;
+    margin: 20px;
+    height: 200px;
+    width: 90%;
 }
